networkpolicy/networkpolicy__basic_kafka_setup__prometheus__exception__app__egress__ports__9093__nr26__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus--exception--app--egress--ports--9093--nr26
  namespace: prometheus
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: gmp-system
    ports:
    - protocol: TCP
      port: 9093
